@@ -17,10 +17,10 @@ if ( ! empty ( $_POST ) ) {
   $comments = getPostValue ( 'comments' );
   $cancel   = getPostValue ( 'cancel' );   
 } else if ( empty ( $ret ) ) {
-   $q_string = $_SERVER['QUERY_STRING'];
+   $q_string = ( ! empty ( $_SERVER['QUERY_STRING'] ) ? '?' . $_SERVER['QUERY_STRING'] : '' );
 
    print_header ();
-   echo "<form action=\"approve_entry.php?$q_string\" method=\"post\" name=\"add_comments\" >\n";
+   echo "<form action=\"approve_entry.php$q_string\" method=\"post\" name=\"add_comments\" >\n";
    echo '<table border="0" cellspacing="5">' . "\n" .
      '<tr><td align="center" valign="botto"><h3>' . 
      translate ( 'Additional Comments (optional)' ) . "</h3></td><tr>\n";
